added the seed file

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -6,9 +6,9 @@
           <div class="container">
             <h3>COURSES</h3>
             <ul>
-              <li><a href="index.html">Home</a></li>
-              <li>/</li>
-              <li>Single Course</li>
+              <li><a href="/courses">Home</a></li>
+              <li>/<a href="/courses">Courses</a>/</li>
+              <li><%=@course.name %></li>
             </ul>
           </div> <!-- /.container -->
         </div> <!-- /.opacity -->
