--- a/app/views/layouts/permission.html.erb
+++ b/app/views/layouts/permission.html.erb
@@ -74,39 +74,34 @@
     </div>
   <% end %>
 
-  <div class="dropdown">
+ 
+    <% ModelList.all.each do |model_list| %>
+           <%= check_box_tag model_list.name,  model_list.name,  {:checked => "false"}  %>
+
+
+  <!-- <div class="dropdown">
     <%= form.label :model_lists %>
     <%= form.collection_select :model_list_id, ModelList.all, :id, :name, prompt: "Select Model",  class: "dropdown-menu" %><br /><br />
-  </div>
+  </div> -->
  
   <div class="field">
     <%= form.label :is_create %>
-   <%= form.radio_button :is_create, 'true', :checked => true %>
-   
-   <%= form.radio_button :is_create, 'false', :checked => false %><br />
-  </div>
 
-  <div class="field">
+
+
+   <%= check_box_tag :is_create, 'false', :checked => false%>
+   
     <%= form.label :is_read %>
-    <%= form.radio_button :is_read, 'true', :checked => true %>
+    <%= check_box_tag :is_read, 'false', :checked => false %>
    
-   <%= form.radio_button :is_read, 'false', :checked => false %>
-  </div>
-
-  <div class="field">
     <%= form.label :is_update %>
-    <%= form.radio_button :is_update, 'true', :checked => true %>
-   
-   <%= form.radio_button :is_update, 'false', :checked => false %>
-  </div>
+      <%= check_box_tag :is_update, 'false', :checked => false %>
 
-
-  <div class="field">
   <%= form.label :is_destroy %>
-  <%= form.radio_button :is_destroy, 'true', :checked => true %>
-   
-   <%= form.radio_button :is_destroy, 'false', :checked => false %>
+ <%= check_box_tag :is_destroy, 'false', :checked => false %>
    </div>
+
+   <% end %>
    <div class="field">
     <%= form.label :role_id %>
     <%= form.collection_select :role_id, Role.all, :id, :name, prompt: "Select Role" %><br /><br />
